# substack-stacker

./: .gitignore  README.md  pyproject.toml  stacker.py
examples/: alexw_posts.docx
substack_stacker/: builder.py  cli.py  client.py  converter.py
